// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Unordered list Default renders correctly 1`] = `
<test>
  <ul
    class="ecl-unordered-list"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Jobs, growth and investment
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          European Semester
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Energy union and climate
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Energy efficiency
        </li>
      </ul>
    </li>
  </ul>
</test>
`;

exports[`EC - Unordered list Default renders correctly with divider variant 1`] = `
<test>
  <ul
    class="ecl-unordered-list ecl-unordered-list--divider"
  >
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Jobs, growth and investment
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Investment Plan for Europe: the Juncker Plan
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            European Semester
          </a>
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Digital single market
      </a>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Energy union and climate
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Security, solidarity and trust
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            A fully-integrated internal energy market
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy efficiency
          </a>
        </li>
      </ul>
    </li>
  </ul>
</test>
`;

exports[`EC - Unordered list Default renders correctly with extra attributes 1`] = `
<test>
  <ul
    class="ecl-unordered-list"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Jobs, growth and investment
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          European Semester
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Energy union and climate
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Energy efficiency
        </li>
      </ul>
    </li>
  </ul>
</test>
`;

exports[`EC - Unordered list Default renders correctly with extra class names 1`] = `
<test>
  <ul
    class="ecl-unordered-list custom-class custom-class--test"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Jobs, growth and investment
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          European Semester
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Energy union and climate
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Energy efficiency
        </li>
      </ul>
    </li>
  </ul>
</test>
`;

exports[`EC - Unordered list Default renders correctly with no-bullet variant 1`] = `
<test>
  <ul
    class="ecl-unordered-list ecl-unordered-list--no-bullet"
  >
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Jobs, growth and investment
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Investment Plan for Europe: the Juncker Plan
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            European Semester
          </a>
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Digital single market
      </a>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Energy union and climate
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Security, solidarity and trust
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            A fully-integrated internal energy market
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy efficiency
          </a>
        </li>
      </ul>
    </li>
  </ul>
</test>
`;

exports[`EC - Unordered list Default with missing input data and debug enabled returns the right warning message 1`] = `
<test>
  <ul
    class="ecl-unordered-list"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Jobs, growth and investment
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        />
        <li
          class="ecl-unordered-list__item"
        >
          European Semester
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    />
    <li
      class="ecl-unordered-list__item"
    >
      Energy union and climate
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Energy efficiency
        </li>
      </ul>
    </li>
  </ul>
  <!-- ecl2-compliance: unordered-list -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [unordered-list] -  Each item should have a {{ label }} property set and filled in. Each sub-item in the {{ nested }} array should have a {{ label }} property set and filled in.
    </p>
  </div>
</test>
`;
